app1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  namespace: argocd-app
  labels:
    app: test-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          # volumeMounts:
          #   - name: storage
          #     mountPath: /usr/share/nginx/html
          command: ["/bin/sh", "-c"]
          args:
            [
              'echo "Bonjour $SUPERSECRET" > /usr/share/nginx/html/index.html && nginx -g ''daemon off;''',
            ]
      # volumes:
      #   - name: storage
      #     persistentVolumeClaim:
      #       claimName: test-app-pvc
