app1/service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-app-svc
  namespace: argocd-app
spec:
  selector:
    app: test-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
